# qtremoteobjects

./: .gitignore  .prev_CMakeLists.txt  .qmake.conf  CMakeLists.txt  conanfile.py  configure.json  dependencies.yaml  licenseRule.json  sync.profile
examples/remoteobjects/: .prev_CMakeLists.txt  CMakeLists.txt  remoteobjects.pro  timemodel.rep
examples/remoteobjects/ble/bleclient/: CMakeLists.txt  bleclient.pro  connectpage.cpp  connectpage.h  connectpage.ui  heaterview.cpp  heaterview.h  mainwindow.cpp  mainwindow.h
examples/remoteobjects/ble/bleserver/: CMakeLists.txt
examples/remoteobjects/ble/common/: Info.cmake.macos.plist  Info.qmake.macos.plist  bleiodevice.cpp  bleiodevice.h
examples/remoteobjects/cbor_python/: CMakeLists.txt  cbor_python.pro
examples/remoteobjects/cbor_python/py_replica/: py_replica.py
examples/remoteobjects/cbor_python/qt_source/: CMakeLists.txt  Simple.rep  main.cpp  qt_source.pro  simple.cpp  simple.h
examples/remoteobjects/clientapp/: CMakeLists.txt  Clock.qml  Plugins.qml  clientapp.pro  clientapp.qrc  main.cpp  plugin.cpp  plugin.h  plugins0.qml  plugins1.qml  plugins2.qml  qmldir
examples/remoteobjects/clientapp/qml/: Clock.qml  plugins.qml  plugins0.qml  plugins1.qml  plugins2.qml
examples/remoteobjects/cppclient/: CMakeLists.txt  main.cpp
examples/remoteobjects/modelviewclient/: CMakeLists.txt  main.cpp
examples/remoteobjects/modelviewserver/: CMakeLists.txt  main.cpp
examples/remoteobjects/plugins/: CMakeLists.txt  plugin.cpp  plugins.pro  plugins.qml  plugins2.qml
examples/remoteobjects/pyside/: replica.py  simple.py  source.py
examples/remoteobjects/qmlmodelviewclient/: CMakeLists.txt  main.cpp
examples/remoteobjects/remoteobjects_server/: CMakeLists.txt  main.cpp  remoteobjects_server.pro  timemodel.cpp
examples/remoteobjects/server/: CMakeLists.txt  main.cpp  timemodel.cpp  timemodel.h
examples/remoteobjects/simpleswitch/: CMakeLists.txt  simpleswitch.pro
examples/remoteobjects/simpleswitch/directconnectclient/: CMakeLists.txt  client.cpp  client.h  main.cpp
examples/remoteobjects/simpleswitch/directconnectdynamicclient/: CMakeLists.txt  dynamicclient.h  main.cpp
examples/remoteobjects/ssl/: CMakeLists.txt
examples/remoteobjects/websockets/: CMakeLists.txt
src/: CMakeLists.txt  src.pro
src/imports/: CMakeLists.txt
src/imports/compat/: CMakeLists.txt  plugin.cpp
src/imports/remoteobjects/: .prev_CMakeLists.txt  CMakeLists.txt  plugin.cpp  remoteobjects.pro
src/remoteobjects/: .prev_CMakeLists.txt  CMakeLists.txt  Qt5RemoteObjectsConfigExtras.cmake.in  Qt5RemoteObjectsMacros.cmake  Qt6RemoteObjectsMacros.cmake  configure.cmake  configure.json  qconnection_local_backend.cpp  qconnection_local_backend_p.h  qconnection_qnx_backend.cpp  qconnection_qnx_backend_p.h  qconnection_qnx_global_p.h  qconnection_qnx_qiodevices.cpp  qconnection_qnx_qiodevices.h  qconnection_qnx_qiodevices_p.h  qconnection_qnx_server.cpp  qconnection_qnx_server.h  qconnection_qnx_server_p.h  qconnection_tcpip_backend.cpp  qconnection_tcpip_backend_p.h  qconnectionabstractfactory_p.h  qconnectionabstractserver.cpp  qconnectionabstractserver_p.h  qconnectionclientfactory.cpp  qconnectionclientfactory_p.h  qconnectionfactories.cpp  qconnectionfactories.h  qconnectionfactories_p.h  qconnectionserverfactory.cpp  qconnectionserverfactory_p.h  qregistrysource.cpp  qregistrysource_p.h  qremoteobjectabstractitemadapter.cpp  qremoteobjectabstractitemadapter_p.h  qremoteobjectabstractitemmodeladapter.cpp  qremoteobjectabstractitemmodeladapter_p.h  qremoteobjectabstractitemmodelreplica.cpp  qremoteobjectabstractitemmodelreplica.h  qremoteobjectabstractitemmodelreplica_p.h  qremoteobjectabstractitemmodeltypes.h  (+33 more)
src/remoteobjects/doc/: qtremoteobjects.qdocconf
src/remoteobjectsqml/: CMakeLists.txt  qremoteobjectsqml_p.h
src/repparser/: .prev_CMakeLists.txt  CMakeLists.txt  parser.g  qregexparser.h  qrepregexparser.h  repparser.cpp  repparser.h  repparser.pro
tests/auto/: .prev_CMakeLists.txt  CMakeLists.txt  auto.pro
tests/auto/benchmarks/: .prev_CMakeLists.txt  CMakeLists.txt  tst_benchmarkstest.cpp
tests/auto/cmake/: CMakeLists.txt
tests/auto/external_IODevice/: CMakeLists.txt
tests/auto/integration/: .gitignore  .prev_CMakeLists.txt  CMakeLists.txt  Engine.cpp  RemoteObjectTest.h  Speedometer.cpp  engine.cpp  engine.h  engine.rep  enum.rep  integration.pro  pod.rep  remoteobjecttest.h  speedometer.cpp  speedometer.h  speedometer.rep  temperature.h  template.pri  tst_integration.cpp
tests/auto/integration_external/: CMakeLists.txt
tests/auto/integration_multiprocess/: CMakeLists.txt  ExtPodInterface.rep  MyInterface.rep
tests/auto/localserveroption/: CMakeLists.txt  tst_localserveroption.cpp
tests/auto/localsockettestserver/: .prev_CMakeLists.txt  CMakeLists.txt  main.cpp
tests/auto/modelreplica/: BLACKLIST  CMakeLists.txt  model.rep  tst_modelreplicatest.cpp
tests/auto/modelview/: CMakeLists.txt  modeltest.cpp  modelview.pro  tst_modelview.cpp
tests/auto/proxy/: CMakeLists.txt  tst_proxy.cpp
tests/auto/proxy_multiprocess/: CMakeLists.txt  namespace.h  proxy_multiprocess.pro  shared.h  subclass.rep
tests/auto/qml/: CMakeLists.txt  qml.pro
tests/auto/reconnect/: CMakeLists.txt
tests/auto/rep_from_header/: .gitignore  CMakeLists.txt  rep_from_header.pro  tst_rep_from_header.cpp
tests/auto/repc/: CMakeLists.txt  repc.pro
tests/auto/repcinlib/: CMakeLists.txt  classwithattributetest.rep  export_header.h  tst_repcinlib.cpp
tests/auto/repcodegenerator/: .gitignore  CMakeLists.txt  classinnamespace.rep  classwithattributetest.rep  repcodegenerator.pro  tst_repcodegenerator.cpp
tests/auto/repfiles/: localdatacenter.rep  tcpdatacenter.rep
tests/auto/repparser/: .prev_CMakeLists.txt  CMakeLists.txt  repparser.pro  tst_parser.cpp
tests/auto/restart/: CMakeLists.txt
tests/auto/server2client/: pods.h  server2client.pro  tst_server2client.cpp
tests/auto/shared/: model_utilities.h
tests/auto/subclassreplica/: CMakeLists.txt  class.rep  subclassreplica.pro  tst_subclassreplicatest.cpp
(+336 files in other folders)
